--- a/.github/actions/apply/action.yml
+++ b/.github/actions/apply/action.yml
@@ -100,7 +100,7 @@ runs:
             owner: context.repo.owner,
             repo: context.repo.repo,
             issue_number: '${{ steps.get-pr.outputs.result }}',
-            body: `**\`🔱 Guardian 🔱\`** - 🟨 Running Apply in dir: \`${{inputs.working_directory}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }})]`,
+            body: `**\`🔱 Guardian 🔱\`** - 🟨 **\`APPLY\`** Running for dir: \`${{inputs.working_directory}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }})]`,
           });
           return prComment.id;
 
@@ -277,7 +277,7 @@ runs:
             owner: context.repo.owner,
             repo: context.repo.repo,
             comment_id: '${{ steps.comment.outputs.result }}',
-            body: `**\`🔱 Guardian 🔱\`** - 🟥 Failed to run Apply in dir: \`${{inputs.working_directory}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }})]\n
+            body: `**\`🔱 Guardian 🔱\`** - 🟥 **\`APPLY\`** Failed for dir: \`${{inputs.working_directory}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }})]\n
           <details>
           <summary>Details</summary>\n
           \`\`\`diff\n
@@ -302,7 +302,7 @@ runs:
             owner: context.repo.owner,
             repo: context.repo.repo,
             comment_id: '${{ steps.comment.outputs.result }}',
-            body: `**\`🔱 Guardian 🔱\`** - 🟩 Ran Apply in dir: \`${{inputs.working_directory}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }})]\n
+            body: `**\`🔱 Guardian 🔱\`** - 🟩 **\`APPLY\`** Successful for dir: \`${{inputs.working_directory}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }})]\n
           <details>
           <summary>Details</summary>\n
           \`\`\`diff\n
