--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -51,6 +51,9 @@ jobs:
         with:
           detect_plan_changes: 'true'
 
+      - name: 'Guardian Hide Previous Plan Comments'
+        uses: './.github/actions/hide-plan-comments'
+
   plan:
     if: ${{ needs.init.outputs.directories != '[]' }}
     needs:
